2003-07-23  Bernhard Held <bernhard@bernhardheld.de>

	added DUMMY_READ_VOLATILE:
	* src/SDCC.y:
	* src/avr/gen.c:
	* src/xa51/gen.c:
	* src/z80/gen.c:
	* src/pic/gen.c:
	* src/pic16/gen.c:
	* src/mcs51/gen.c:
	* src/ds390/gen.c:
	* src/SDCCcse.c (algebraicOpts): many improvements
	* src/SDCCcse.h: removed algebraicOpts()
	* src/SDCCicode.c (picDummyRead): added

2003-07-23  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

	* as/mcs51/lkmem.c: Changed message "Insufficient DRAM memory" to
	"Insufficient space in data memory".

2003-07-20  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/mcs51/gen.c: fixed bug #771358
	* src/z80/gen.c: fixed bug #759087

2003-07-20  Bernhard Held <bernhard@bernhardheld.de>

        * src/pic16/glue.c: minor cleanup by Vangelis

2003-07-19  Frieder Ferlemann <Frieder.Ferlemann@web.de>

        * device/include/regc515c.h: fixed #758477
        * device/lib/_gptrget.c: saving some cycles in generic pointer get
        * device/lib/_gptrput.c: saved a few bytes
	* my tab spacing is 8, yours too?)
        * device/lib/_ser.c: process RX bytes earlier than TX bytes
        * device/lib/serial.c: process RX bytes earlier than TX bytes
        * src/mcs51/gen.c(genGenPointerGet/Set): removed writing of type after postincrement
        
2003-07-18  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/z80/gen.c: fixed some right shift bugs (#772726 among them)

2003-07-17  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

    * link/z80/lklibr.c: fixed bug when there is a '.' in a library path.

2003-07-17  Bernhard Held <bernhard@bernhardheld.de>

        * device/lib/Makefile.in: bad fix, reverted to 1.43
	
2003-07-16  Bernhard Held <bernhard@bernhardheld.de>

	* device/lib/Makefile.in: added missing z80 object files

2003-07-14  Bernhard Held <bernhard@bernhardheld.de>

        * src/SDCCcse.c (algebraicOpts): CSE fun with &|^ and 0x00/0xff literals
	pic16 progress by Vangelis:
	* src/SDCCglobl.h:
	* src/SDCCmain.c:
	* src/pic/Makefile: